# affective_classification_ecommerce

./: .gitignore  README.md  main.py  modelling.ipynb  preprocessing_time_benchmark_with_export.ipynb  preprocessing_with_vectorize.ipynb  pyproject.toml
notebooks/: eda.ipynb  emotion_improvement.ipynb  evaluate_best_models.ipynb  modelling.ipynb  preprocessing.ipynb  preprocessing_time_benchmark_with_export.ipynb  preprocessing_with_vectorize.ipynb
