[project]
name = "affective-classification-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "imblearn>=0.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
